--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title>  this is a title </title>
+    <title> This is my first page </title>
   </head>
   <body>
+    <h1> I LIKE CODAGE </h1>
     Hello , you are awesome !
   </body>
 </html>
