--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <img src=https://avatars3.githubusercontent.com/u/75449783?v=4>
     <title> This is my first page </title>
   </head>
   <body>
