--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title> This is my first page </title>
   </head>
   <body>
+      <li> 
+        <ul>Papa</ul>
+        <ul> Ibrahima </ul>
+        <ul> Faye </ul>
     <h1> I LIKE CODAGE </h1>
     Hello , you are awesome !
   </body>
