--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   </head>
   <body>
     <h1> I LIKE CODAGE </h1>
+    <li>
+      <ul> Papa </ul>
+      <ul> Ibrahima </ul>
+      <ul> Faye </ul>
+    </li>
     Hello , you are awesome !
   </body>
 </html>
