--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <ul> Papa </ul>
       <ul> Ibrahima </ul>
       <ul> Faye </ul>
+      <ul> My fav site <a href="https://github.com">github.com</a></ul>
     </li>
     Hello , you are awesome !
   </body>
