--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <img src=https://avatars3.githubusercontent.com/u/75449783?v=4>
+    <link rel="stylesheet" href="style.css">
     <title> This is my first page </title>
   </head>
   <body>
